<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">抓图</string>
    <string name="action_settings">关于</string>
    <string name="loading_failed">加载失败</string>
    <string name="loading">Loading...</string>
    <string name="the_end">TheEnd</string>
    <string name="action_refresh">刷新</string>
    <string name="view_big_image">查看大图</string>
    <string name="pref_key_version">pref_key_version</string>
    <string name="action_feedback">反馈</string>
    <string name="down_img">保存到本地</string>
    <string name="no_sdcard">没有存储设备，无法保存图片</string>
    <string name="title_activity_app_main">抓图</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_new">最新</string>
    <string name="title_like">收藏</string>
    <string name="action_add">添加</string>
    <string name="action_delete">删除图集 [%s]</string>
    <string name="action_switch">Switch</string>
    <string name="title_activity_add_feed">AddFeedActivity</string>

    <string name="feed_name">名称</string>
    <string name="feed_addr">网址</string>

    <string name="do_not_delete_like">请不要删除收藏</string>
    <string name="haixiuzu">害羞组</string>
    <string name="meizitu">妹子图</string>

    <string name="wait_backgroud">后台正在加载更多图片, 请稍后</string>

</resources>
