<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textPersonName"
        android:hint="@string/feed_name"
        android:ems="10"
        android:id="@+id/feed_name"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feed_addr"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/feed_addr" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:text="@string/action_add"
        android:id="@+id/add_feed"
        android:enabled="false"
        android:background="@android:color/darker_gray"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.01" />
</LinearLayout>